# llm-review-action

./: .pre-commit-config.yaml  README.md  action.yml  blog.txt  justfile  pyproject.toml  release.sh
.github/workflows/: main.yml  test.yml
examples/: average.py  blog.txt  cars.txt  greet.py  song.txt
src/llm_action/: __main__.py  models.py  prompt.py
src/llm_review/: __main__.py  models.py  prompt.py
templates/: python.txt
tests/: test_main.py  test_models.py  test_prompt.py
