[tool.poetry]
name = "llm_action"
version = "0.1.0"
description = ""
authors = ["Timo Uelen <timo.uelen@xebia.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
openai = "^1.6.1"
typer = "^0.9.0"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.27.1"
pytest = "^7.4.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
